add structure to page in preparation for css

--- a/index.html
+++ b/index.html
@@ -17,13 +17,32 @@
     </header>
         <div class="hero-text">Fake Baseball, Real Fun</div>
         <p>Some additional text about what this actually is.</p>
-        <!-- then an image-->
+        <img src="images/ballfield.jpg" width="400" height="300">
     </div>
     <div class="body-2">
-        There will be a few images here that probably would be links on a real site.
+        <div class="image-callout">
+            <img src="images/glove.jpg" width="300" height="200">
+            <p>A glove after a hard-played practice game.</p>
+        </div>
+        <div class="image-callout">
+            <img src="images/slide.jpg" width="300" height="200">
+            <p>Jay Murray slides in for another successful steal.</p>
+        </div>
+        <div class="image-callout">
+            <img src="images/hit.jpg" width="300" height="200">
+            <p>An Ironclads slugger launches a hard hit ball onto the Mustangs right field porch.</p>
+        </div>
+        <div class="image-callout">
+            <img src="images/tag.jpg" width="300" height="200">
+            <p>Tag!  A Vermilion Buckeye gets caught stealing.</p>
+        </div>
     </div>
     <div class="body-3">
-        Here will be an inspirational quote (maybe something from the back of the book)
+        <h2>What Our Players Have to Say</h2>
+        <blockquote>"Literally the most fun I've ever had"<br>- Gabe</blockquote>
+        <blockquote>"I've got such a good team, I don't understand why I keep losing."<br>- Ike</blockquote>
+        <blockquote>"Bruh if you strike out one mroe time, I'm sending you back to the Milk Cows."<br>- Justin</blockquote>
+        <blockquote>"I'll definitely get that game played this week."<br>- Dox</blockquote>
     </div>
     <footer>
         Join the Cyclone League!
