--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>What Our Players Have to Say</h2>
         <blockquote>"Literally the most fun I've ever had"<br>- Gabe</blockquote>
         <blockquote>"I've got such a good team, I don't understand why I keep losing."<br>- Ike</blockquote>
-        <blockquote>"Bruh if you strike out one mroe time, I'm sending you back to the Milk Cows."<br>- Justin</blockquote>
+        <blockquote>"Bruh if you strike out one more time, I'm sending you back to the Milk Cows."<br>- Justin</blockquote>
         <blockquote>"I'll definitely get that game played this week."<br>- Dox</blockquote>
     </div>
     <footer>
