add div to logo text

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Landing</title>
 </head>
 <body>
     <div class="body-1">
     <header>
-        Cyclone League Baseball
+        <div class="logo">Cyclone League Baseball</div>
         <ul>
             <li>Header Link One</li>
             <li>Header Link Two</li>
