--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Odin Landing</title>
 </head>
 <body>
@@ -15,8 +19,11 @@
             <li>Header Link Three</li>
         </ul>
     </header>
-        <div class="hero-text">Fake Baseball, Real Fun</div>
-        <p>Some additional text about what this actually is.</p>
+        <div class="hero-text-container">
+            <div class="hero-text">Fake Baseball, Real Fun</div>
+            <p>Some additional text about what this actually is.</p>
+            <button>Sign up</button>
+        </div>
         <img src="images/ballfield.jpg" width="400" height="300">
     </div>
     <div class="body-2">
