add css styling for hero text area

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>Odin Landing</title>
 </head>
 <body>
-    <div class="body-1">
     <header>
         <div class="logo">Cyclone League Baseball</div>
         <ul>
@@ -19,12 +18,14 @@
             <li>Header Link Three</li>
         </ul>
     </header>
+
+    <div class="body-1">
         <div class="hero-text-container">
             <div class="hero-text">Fake Baseball, Real Fun</div>
             <p>Some additional text about what this actually is.</p>
             <button>Sign up</button>
         </div>
-        <img src="images/ballfield.jpg" width="400" height="300">
+        <img id ="header-image" src="images/ballfield.jpg" width="400" height="300">
     </div>
     <div class="body-2">
         <div class="image-callout">
