add css to body-2

--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
         </div>
         <img id ="header-image" src="images/ballfield.jpg" width="400" height="300">
     </div>
+    <h1 id="body-2-header">Some Shots From This Season</h1>
     <div class="body-2">
-        <div class="image-callout">
-            <img src="images/glove.jpg" width="300" height="200">
-            <p>A glove after a hard-played practice game.</p>
-        </div>
         <div class="image-callout">
             <img src="images/slide.jpg" width="300" height="200">
             <p>Jay Murray slides in for another successful steal.</p>
+        </div>
+        <div class="image-callout">
+            <img src="images/pitch.jpg" width="300" height="200">
+            <p>Gunfighter Fuentes fires off another heater.</p>
         </div>
         <div class="image-callout">
             <img src="images/hit.jpg" width="300" height="200">
