add css to body-3 and footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <img id ="header-image" src="images/ballfield.jpg" width="400" height="300">
     </div>
-    <h1 id="body-2-header">Some Shots From This Season</h1>
+    <h1 class="centered">Some Shots From This Season</h1>
     <div class="body-2">
         <div class="image-callout">
             <img src="images/slide.jpg" width="300" height="200">
@@ -47,16 +47,20 @@
         </div>
     </div>
     <div class="body-3">
-        <h2>What Our Players Have to Say</h2>
-        <blockquote>"Literally the most fun I've ever had"<br>- Gabe</blockquote>
-        <blockquote>"I've got such a good team, I don't understand why I keep losing."<br>- Ike</blockquote>
-        <blockquote>"Bruh if you strike out one more time, I'm sending you back to the Milk Cows."<br>- Justin</blockquote>
-        <blockquote>"I'll definitely get that game played this week."<br>- Dox</blockquote>
+        <h1 class="centered">What Our Players Have to Say</h1>
+        <blockquote>"Literally the most fun I've ever had"<div class="author">-Gabe</div></blockquote>
+        <blockquote>"I've got such a good team, I don't understand why I keep losing."<div class="author">-Ike</div></blockquote>
+        <blockquote>"Bruh if you strike out one more time, I'm sending you back to the Milk Cows."<div class="author">-Justin</div></blockquote>
+        <blockquote>"I'll definitely get that game played this week."<div class="author">-Dox</div></blockquote>
     </div>
     <footer>
-        Join the Cyclone League!
-        Sign up to be notified when the league has an opening!
-        <button>Sign Up!</button>
+        <div class="call-to-action">
+                <div class="cta-text">
+                <div class="cta-head">Join the Cyclone League!</div>
+                Sign up to be notified when the league has an opening!
+            </div>
+            <button>Sign Up!</button>
+        </div>
     </footer>
 </body>
 </html>
