add links to header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <div class="logo">Cyclone League Baseball</div>
         <ul>
-            <li>Header Link One</li>
-            <li>Header Link Two</li>
-            <li>Header Link Three</li>
+            <li><a href="#">Header Link One</a></li>
+            <li><a href="#">Header Link Two</a></li>
+            <li><a href="#">Header Link Three</a></li>
         </ul>
     </header>
 
@@ -23,7 +23,7 @@
         <div class="hero-text-container">
             <div class="hero-text">Fake Baseball, Real Fun</div>
             <p>Some additional text about what this actually is.</p>
-            <button>Sign up</button>
+            <button type="button">Sign up</button>
         </div>
         <img id ="header-image" src="images/ballfield.jpg" width="400" height="300">
     </div>
