update quote in body-3

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div class="body-3">
         <h1 class="centered">What Our Players Have to Say</h1>
-        <blockquote>"Literally the most fun I've ever had"<div class="author">-Gabe</div></blockquote>
+        <blockquote>"Did you just roll <em>another</em> 47?"<div class="author">-Gabe</div></blockquote>
         <blockquote>"I've got such a good team, I don't understand why I keep losing."<div class="author">-Ike</div></blockquote>
         <blockquote>"Bruh if you strike out one more time, I'm sending you back to the Milk Cows."<div class="author">-Justin</div></blockquote>
         <blockquote>"I'll definitely get that game played this week."<div class="author">-Dox</div></blockquote>
